Added focus to search box on page load

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
       rel="stylesheet"
       href="https://cdn.materialdesignicons.com/5.3.45/css/materialdesignicons.min.css"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <title>MyStartPage</title>
   </head>
   <body>
     <noscript>
